# ipl-sentiment-trading

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/balls/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+31 more)
data/chunks/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+30 more)
data/odds/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  46.json  (+30 more)
data_collection/: utils.py
data_collection/reddit/extractor/: threads.ipynb
data_collection/sentiment_analysis/: chunk_data.py  sentiment-analysis.ipynb
data_collection/sportmonks/: venues.json
examples/: 74.md
src/ipl_sentiment_betting/: main.py
tests/: test_analyzer.py  test_sentiment.py
(+438 files in other folders)
